--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "npx husky install",
-    "format": "prettier --cache --write",
-    "lint-front": "lint-staged"
+    "format": "prettier --cache --write .",
+    "lint": "eslint --cache ."
   },
   "lint-staged": {
     "*.{ts,tsx}": [
