--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "npx husky install",
+    "postinstall": "husky install",
     "format": "prettier --cache --write .",
     "lint": "eslint --cache ."
   },
